code/src/index.css
body {
  overflow-x: hidden;
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
    color: white;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

.outer-wrapper {
  position: relative;
  width: 100vw;
  height: 100vh;
  display: flex;
  align-items: center;
  flex-direction: column;
  background-color: #330033;
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='400' height='400' viewBox='0 0 800 800'%3E%3Cg fill='none' stroke='%23404' stroke-width='1'%3E%3Cpath d='M769 229L1037 260.9M927 880L731 737 520 660 309 538 40 599 295 764 126.5 879.5 40 599-197 493 102 382-31 229 126.5 79.5-69-63'/%3E%3Cpath d='M-31 229L237 261 390 382 603 493 308.5 537.5 101.5 381.5M370 905L295 764'/%3E%3Cpath d='M520 660L578 842 731 737 840 599 603 493 520 660 295 764 309 538 390 382 539 269 769 229 577.5 41.5 370 105 295 -36 126.5 79.5 237 261 102 382 40 599 -69 737 127 880'/%3E%3Cpath d='M520-140L578.5 42.5 731-63M603 493L539 269 237 261 370 105M902 382L539 269M390 382L102 382'/%3E%3Cpath d='M-222 42L126.5 79.5 370 105 539 269 577.5 41.5 927 80 769 229 902 382 603 493 731 737M295-36L577.5 41.5M578 842L295 764M40-201L127 80M102 382L-261 269'/%3E%3C/g%3E%3Cg fill='%23505'%3E%3Ccircle cx='769' cy='229' r='5'/%3E%3Ccircle cx='539' cy='269' r='5'/%3E%3Ccircle cx='603' cy='493' r='5'/%3E%3Ccircle cx='731' cy='737' r='5'/%3E%3Ccircle cx='520' cy='660' r='5'/%3E%3Ccircle cx='309' cy='538' r='5'/%3E%3Ccircle cx='295' cy='764' r='5'/%3E%3Ccircle cx='40' cy='599' r='5'/%3E%3Ccircle cx='102' cy='382' r='5'/%3E%3Ccircle cx='127' cy='80' r='5'/%3E%3Ccircle cx='370' cy='105' r='5'/%3E%3Ccircle cx='578' cy='42' r='5'/%3E%3Ccircle cx='237' cy='261' r='5'/%3E%3Ccircle cx='390' cy='382' r='5'/%3E%3C/g%3E%3C/svg%3E");
   /* background by SVGBackgrounds.com */
}

.inner-wrapper {
  width: 100vw;
  max-width: 900px;
}

.question-box {
  margin-top: 20%;
  margin-left: 20px;
}

.question {
  font-family: 'Courier New', Courier, monospace;
  font-size: 25px;
  line-height: 50px;
  font-weight: bold;
}

.button-text p {
  margin-left: 20px;  
}

p {
  font-family: 'Courier New', Courier, monospace;
  font-size: 18px;
  line-height: 100px;
  font-weight: bold;
}

label {
  display: block;
  font-family: 'Courier New', Courier, monospace;
  font-size: 18px;
}

.label-box {
  margin-right: 1%;
}

button {
  position: absolute;
  bottom: 30%;
  right: 10%;
  color: #330033;
  background-color: white;
  padding: 15px 40px;
  font-size: 20px;
  font-weight: bold;
  border-radius: 8px;
}

.footer {
  position: absolute;
  bottom: 0%;
  left: 10%;
  text-align: center;
}

.footer p {
  font-family: 'Open Sans', sans-serif;
  font-size: 12px;
  line-height: 16px;
  padding: 1%;
}

.footer a {
  color: white;
}

.footer-hide {
  display: none;
}

.image-wrapper {
  display: flex;
  justify-content: center;
  margin-top: 2%;
  }

.linux-img {
  display: block;
  height: 70px;
  width: auto;
}

.pi-img {
  display: block;
  margin-top: 3%;
  height: 45px;
  width: auto;
}

.end-page {
  display: flex;
  justify-content: center;
  margin-top: 20%;
}

/*START*/
h1 {
  font-family: 'Dancing Script', cursive;
  font-size: 100px;
  line-height: 150px;
  margin: 20px 20px;
}

h2 {
  font-family: 'Courier New', Courier, monospace;
  font-weight: bold;
  font-size: 18px;
  line-height: 40px;
  margin: 40px 15px;
}

/*QUESTION 3*/
.radioBtn {
  display: flex;
  justify-content: flex-end;
  flex-direction: row-reverse;
}

/*QUESTION 4*/
.dropdown {
  color: #330033;
  background-color: white;
  padding: 18px 50px;
  font-size: 20px;
  font-weight: bold;
  border-radius: 8px;
}

/*SUMMARY*/
.summary-text {
  margin: 10% 0% 5% 0%;
}

.summary p {
  font-family: 'Courier New', Courier, monospace;
  font-size: 18px;
  line-height: 30px;
  font-weight: bold;
  margin: 20px 20px;
}

.summary img {
  margin-left: 25%;
}

img {
  width: 40%;
  height: auto;
  border-radius: 100px;
}

/* TABLET */
@media (min-width: 668px) and (max-width:1024px) {
  .question-box {
    margin-top: 20%;
    margin-left: 40px;
  }
  
  .question {
    font-family: 'Courier New', Courier, monospace;
    font-size: 25px;
    line-height: 50px;
    font-weight: bold;
  }
  
  .button-text p {
    margin-left: 40px;  
  }
  
  p {
    font-family: 'Courier New', Courier, monospace;
    font-size: 25px;
    line-height: 100px;
    font-weight: bold;
  }
  
  label {
    display: block;
    font-family: 'Courier New', Courier, monospace;
    font-size: 25px;
    line-height: 35px;
  }
  
  .label-box {
    margin-right: 1%;
  }
  
  button {
    position: absolute;
    bottom: 20%;
    right: 10%;
    color: #330033;
    background-color: white;
    padding: 18px 50px;
    font-size: 20px;
    font-weight: bold;
    border-radius: 8px;
  }
  
  .footer {
    position: absolute;
    width: 600px;
    bottom: 5%;
    left: 5%;
    text-align: left;
  }
  
  .footer p {
    font-family: 'Open Sans', sans-serif;
    font-size: 16px;
    line-height: 18px;
    padding: 1%;
  }
  
  .footer a {
    color: white;
  }
  
  .footer-hide {
    display: block;
  }
  
  .end-page {
    display: flex;
    justify-content: center;
    margin-top: 20%;
  }
  
  /*START*/
  h1 {
    font-family: 'Dancing Script', cursive;
    font-size: 120px;
    line-height: 200px;
    margin: 60px 40px;
  }
  
  h2 {
    font-family: 'Courier New', Courier, monospace;
    font-weight: bold;
    font-size: 25px;
    line-height: 40px;
    margin: 40px 40px;
  }
  
  /*QUESTION 3*/
  .radioBtn {
    display: flex;
    justify-content: flex-end;
    flex-direction: row-reverse;
  }
  
  /*QUESTION 4*/
  .dropdown {
    color: #330033;
    background-color: white;
    padding: 18px 50px;
    font-size: 20px;
    font-weight: bold;
    border-radius: 8px;
  }
  
  /*SUMMARY*/
  .summary-text {
    margin: 10% 0% 5% 0%;
  }
  
  .summary p {
    font-family: 'Courier New', Courier, monospace;
    font-size: 18px;
    line-height: 30px;
    font-weight: bold;
    margin: 20px 40px;
  }
  
  .summary img {
    margin-left: 25%;
  }
  
  img {
    width: 40%;
    height: auto;
    border-radius: 100px;
  }
}  

/*DESKTOP*/
@media (min-width: 1025px) {

  .question {
    font-family: 'Courier New', Courier, monospace;
    font-size: 25px;
    line-height: 50px;
    font-weight: bold;
  }

  p {
    font-family: 'Courier New', Courier, monospace;
    font-size: 18px;
    line-height: 100px;
    font-weight: bold;
  }

  label {
    display: block;
    font-family: 'Courier New', Courier, monospace;
    font-size: 18px;
  }

  .label-box {
    margin-right: 1%;
  }

  button {
    position: absolute;
    bottom: 20%;
    right: 20%;
    color: #330033;
    background-color: white;
    padding: 18px 50px;
    font-size: 20px;
    font-weight: bold;
    border-radius: 8px;
  }

  .footer {
    position: absolute;
    width: 500px;
    bottom: 5%;
    left: 10%;
    text-align: left;
  }

  .footer p {
    font-family: 'Open Sans', sans-serif;
    font-size: 14px;
    line-height: 20px;
  }

  .footer a {
    color: white;
    text-decoration: none;
  }

  .footer:hover a {
    color: white;
    text-decoration: underline;
    font-size: 16px;
  }

  .footer-hide {
    display: block;
  }

  .image-wrapper {
    display: flex;
    margin-top: 2%;
    }

  .linux-img {
    display: block;
    height: 100px;
    width: auto;
  }

  .pi-img {
    display: block;
    margin-top: 3%;
    height: 65px;
    width: auto;
  }

  .end-page {
    display: flex;
    justify-content: center;
    margin-top: 20%;
  }

  /*START*/
  h1 {
    font-family: 'Dancing Script', cursive;
    font-size: 120px;
    line-height: 200px;
    margin: 50px 0px;
  }

  h2 {
    font-family: 'Courier New', Courier, monospace;
    font-weight: bold;
    font-size: 30px;
    line-height: 60px;
    margin: 50px 0px;
  }

  /*QUESTION 3*/
  .radioBtn {
      display: flex;
      align-items: center;
      flex-direction: column;
  }

  .radioBtnContainer {
    margin: 10% 0%;
    display: flex;
    align-items: center;
    flex-direction: row;
    justify-content: space-around;
  }

  /*SUMMARY*/
  .summary-text {
    margin: 10% 0% 5% 0%;
  }

  .summary p {
    font-family: 'Courier New', Courier, monospace;
    font-size: 18px;
    line-height: 30px;
    font-weight: bold;
  }

  .summary img {
    margin-left: 25%;
  }

  img {
    width: 40%;
    height: auto;
    border-radius: 100px;
  }

}

